@@ -23,7 +23,7 @@
         <maven.compiler.release>21</maven.compiler.release>
         <cdk.version>2.243.0</cdk.version>
         <constructs.version>10.5.1</constructs.version>
-        <junit.version>6.0.3</junit.version>
+        <junit.version>5.12.2</junit.version>
     </properties>
 
     <dependencies>
@@ -74,12 +74,9 @@
                         <dependency>
                             <groupId>org.junit.jupiter</groupId>
                             <artifactId>junit-jupiter-engine</artifactId>
-                            <version>6.0.3</version>
+                            <version>${junit.version}</version>
                         </dependency>
                     </dependencies>
-                    <configuration>
-                        <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
